@@ -1,5 +1,10 @@
 2015-05-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* contrib/addtiffo/tif_ovrcache.c (TIFFCreateOvrCache): Fix
+	Coverity 298615 "Resource leak".
+	(TIFFGetOvrBlock): Fix Coverity 1024649 "Unintended sign
+	extension".
+
 	* tools/bmp2tiff.c (main): Fix Coverity 1024225 "Untrusted value
 	as argument".
 	(main): Fix Coverity 1024678 "Unchecked return value from
